# EigenSim

./: .gitignore  EigenSim.sql  README.md
Documentation/: NVDA_2025-03-01_to_2025-07-01.csv  schema.sql  strategies.json  trades_sample_1000.csv
public_html/: account.php  backtest_select_strategy.php  backtest_select_ticker.php  confirm_backtest.php  create_strategy.php  dashboard.php  delete_strategy.php  index.php  login.php  register.php  report.php  run_engine.php  run_report.php  update_account.php  view_results.php
public_html/assets/: styles.css
public_html/common/: auth.php  footer.php  header.php  polygon_api.php
report/: main.py
simulate/: CMakeLists.txt  Makefile  README.md
simulate/cmake/: options.cmake
simulate/src/: engine_custom.cpp  engine_predef.cpp  test_eigensim.cpp
simulate/src/include/: csv.cpp  csv.h  stock.h
simulate/src/include/strategies/: bollinger.cpp  bollinger.h  breakout.cpp  breakout.h  ma.cpp  ma.h  macd.cpp  macd.h  mean.cpp  mean.h  momentum.cpp  momentum.h  rsi.cpp  rsi.h  strategy.h  volume.cpp  volume.h
simulate/tests/: test_eigensim.cpp  test_libs.cpp
validator/: prompt_validator.py
